2004-07-02  Christian Neumair  <chris@gnome-de.org>

	* properties.c (prop_cb): Fix 'Probress Bar' a11y typos.

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>
	
	* properties.c (prop_cb):

	Accessibility fixes bug #135374.

	Patch by: Karthik BG  <kkbg@softhome.net>

2004-05-27  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c:
	- Ensure battery warning dialogs are line wrapped.
	- Add time remaining to low battery warning dialog.

2004-05-27  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c: Remove all uses of snprintf and replace them with
	g_strdup and g_strdup_printf. Closes #143210.

2004-05-23  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c:
	- Improve and apply a fix from Richard Kinder <r_kinder@yahoo.com> to
	make the battery warning dialog appear every time the battery power
	drops below the "red-line". Closes #138235.
	- Require the battery to be present to display the low power warning.
	This means if ACPId stops, the warning dialog will not be displayed.
	- Update the warning dialogs to use gtk_dialog, rather then the
	deprecated GNOME dialogs. This adds the string "Battery Notice".

2004-05-22  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c: Ensure that when the widget is destroyed the
	pointer is set to NULL.

2004-05-19  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c: Fix a segmentation fault caused by attempting to
	remove the dialog when it wasn't even put there.

2004-05-16  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c:
	* battstat.h: Close bug #131322. Make the battery warning
	dialog disappear when you plug AC power in.

2004-05-16  Davyd Madeley  <davyd@ucc.asn.au>

	* acpi-linux.c:
	* battstat_applet.c:
	Replace useless Critical/Low/High message in tooltip with a time
	remaining. Based off a patch by Colin Leroy <colin@colino.net>, now
	with ACPI support. Closes #138959.

2004-03-17  Glynn Foster  <glynn.foster@sun.com>
