@@ -1,3 +1,8 @@
+2004-07-09  Vincent Noel  <vnoel@cox.net>
+
+	* battstat_applet.c (change_orient): Make the applet horizontal
+	on wide vertical panels.
+
 2004-07-02  Christian Neumair  <chris@gnome-de.org>
 
 	* properties.c (prop_cb): Fix 'Probress Bar' a11y typos.
